--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>ua.com.foxminded</groupId>
-  <artifactId>SqlJdbcSchoolApplication</artifactId>
+  <artifactId>sql-jdbc-school</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>SqlJdbcSchoolApplication</name>
   <description>An application that inserts/updates/deletes data in the database using JDBC.</description>
