--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,23 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>ua.com.foxminded</groupId>
-  <artifactId>sql-jdbc-school</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>SqlJdbcSchoolApplication</name>
-  <description>An application that inserts/updates/deletes data in the database using JDBC.</description>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>ua.com.foxminded</groupId>
+    <artifactId>sql-jdbc-school</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>SqlJdbcSchoolApplication</name>
+    <description>An application that inserts/updates/deletes data in the database using JDBC.</description>
 
-  <properties>
+    <properties>
         <maven.compiler.version>3.8.1</maven.compiler.version>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <junit.jupiter.version>5.4.2</junit.jupiter.version>
         <maven.surefire.version>2.22.1</maven.surefire.version>
+        <h2.database.version>1.4.200</h2.database.version>
+        <!-- <dbunit.version>2.7.0</dbunit.version> -->
+        <assertj.version>3.16.1</assertj.version>
+        <mockito.jupiter.version>3.11.0</mockito.jupiter.version>
         <checkstyle.plugin.version>3.1.1</checkstyle.plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -21,6 +27,26 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>${h2.database.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- <dependency> <groupId>org.dbunit</groupId> <artifactId>dbunit</artifactId> 
+            <version>${dbunit.version}</version> <scope>test</scope> </dependency> -->
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>${mockito.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
